# steelonline20-Hour-Tash-Laboratory-Advanced-Analysis-Services-base-do-site

./: .env  App.tsx  CLOUDFLARE_DEPLOYMENT.md  README.md  index.html  index.tsx  manifest.json  metadata.json  package-lock.json  package.json  pyproject.toml  replit.md  sw.js  tailwind.config.js  tsconfig.json  types.ts  vite-env.d.ts  vite.config.ts
attached_assets/: Pasted-2025-12-08T15-48-19-451069Z-Cloning-repository-2025-12-_1765213976418.txt  Pasted-2025-12-08T18-02-45-728852Z-Cloning-repository-2025-12-_1765217045158.txt  Pasted-FAQ-021-22041655-Steel-Online-20-IronSnapp-Rebar-Tehran_1765197466829.txt  Pasted-M-My-Workspace-New-Web-Service-Search-Ctrl-K-New-Upgrad_1765218621832.txt  Pasted-Skip-to-content-Cloudflare-Chatgpt4compas-gmail-com-s-A_1765213961936.txt  Pasted-Supabase-lq71kq44ui7-academic-edu-rs-s-Org-Free-teelonl_1765117540924.txt  webpage_all_2025-12-07T20-07-38-657Z_1765138074781.txt
backend/: scraper_service.py
components/: ArticlePage.tsx  AuditAIPanel.tsx  AuditChecks.tsx  AuditDashboard.tsx  AuditOverview.tsx  BaristaCoach.tsx  BayerAflakPage.tsx  CafeFinderPage.tsx  ConceptAnalyzer.tsx  ContentHubPage.tsx  DashboardComponents.tsx  DashboardPage.tsx  DatingSimulator.tsx  FeminineFirstDatingPage.tsx  Footer.tsx  FranchisePage.tsx  GeneratorForm.tsx  GrantAdopter.tsx  Header.tsx  Hero.tsx  HomePage.tsx  IronSnappPage.tsx  LawyerFinder.tsx  LoginModal.tsx  MapFinderPage.tsx  MenuModal.tsx  NewsSummarizer.tsx  PriceDashboard.tsx  PricesPage.tsx  QuotaErrorModal.tsx  RecommendationEnginePage.tsx  ReviewSystem.tsx  SEO.tsx  SEOChecker.tsx  (+5 more)
(+41 files in other folders)
